# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("nweb_test_config") {
  include_dirs = [
    "ohos_nweb",
    "//base/web/webview/interfaces/innerkits/ohos_nweb",
    "//foundation/windowmanager/interfaces/innerkits/wm",
    "//foundation/multimodalinput/input/interfaces/native/innerkits/event/include",
  ]

  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
  ]
}

ohos_executable("nweb_test") {
  install_enable = false

  sources = [
    "ohos_nweb/nweb_downloadlistener_impl_test.cpp",
    "ohos_nweb/nweb_handler_impl_test.cpp",
    "ohos_nweb/nweb_handler_impl_test_for_intercept.cpp",
    "ohos_nweb/nweb_input_event_consumer_test.cpp",
    "ohos_nweb/nweb_javascript_result_callback_test.cpp",
    "ohos_nweb/nweb_js_dialog_impl_test.cpp",
    "ohos_nweb/ohos_nweb_test.cpp",
  ]

  configs = [ ":nweb_test_config" ]

  deps = [
    "//base/web/webview/ohos_nweb:libnweb",
    "//foundation/aafwk/standard/frameworks/kits/appkit:appkit_native",
    "//foundation/windowmanager/wm:libwm",
    "//third_party/zlib:libz",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "multimodalinput_base:libmmi-client",
    "samgr_standard:samgr_proxy",
  ]

  part_name = "webview"
  subsystem_name = "web"
}
