# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//testing/test.gni")

test("ohos_adapter_unittests") {

  sources = [
    "ohos_adapter_test_suite.cc",
    "ohos_adapter_test_suite.h",
    "run_all_unittests.cc",
  ]

  public_deps = [
    "//testing/gmock",
    "//testing/gtest",
  ]

  deps = [
    "//ohos_adapter:unittests",
    "//base",
    "//base/test:test_support"
  ]
}